--- a/public/css.css
+++ b/public/css.css
@@ -5,7 +5,8 @@
 
 .invoice {
     border: 3px solid black;
-    width: 300px;
+    width: 100vw;
+    height: 95%;
     padding: 2px 10px;
     margin: 20px;
 }
@@ -13,6 +14,12 @@
 .invoice .sender_info {
     display: block;
     margin-bottom: 10px;
+    font-size: 50px;
+}
+.invoice .receiver_info {
+    display: block;
+    margin-bottom: 10px;
+    font-size: 50px;
 }
 
 .invoice .sender_info .sender_details {
@@ -22,7 +29,7 @@
 }
 
 .invoice hr {
-    width: 320px;
+    width: 103%;
     position: relative;
     left: -10px;
     height: 3px;
@@ -33,7 +40,8 @@
 
 .invoice .shipment_info {
     display: block;
-    margin-top: 10px;
+    font-size: 40px;
+    margin: 20px 0;
 }
 .invoice .receiver_info h3:first-child{
     text-transform: capitalize;
@@ -47,9 +55,17 @@
     width: 32%;
     margin-right: 4%;
 }
-.invoice .barcode p{
-    font-size: 15px;
+.invoice .barcode {
+    padding-top: 15px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.invoice .inst{
+    font-size: 30px;
     text-align: center;
+    margin-top: 150px;
 }
 .invoice .sender_info::after, .invoice .shipment_info::after {
     content: "";
